# Transcriber

./: README.md  app.py  dockerfile  main.py  pyproject.toml  requirements.txt
